# einstein

./: .auto_solve_prompt.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARTIFACTS.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  RESUME.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
agent/: README.md  cycle-log.md  skill-library.md  wiki-gaps-2026-05-02-v3.md  wiki-gaps-2026-05-02-v4.md  wiki-gaps-2026-05-02.md  wiki-gaps-2026-05-03.md
config/: ablation_council_smoke.md  ablation_heilbronn_problems.yaml  ablation_near_circles_probe.yaml  ablation_near_probe.yaml  ablation_problems.yaml  ablation_solverate_candidates.yaml  ablation_transfer.template.yaml  ablation_transfer_far.yaml  ablation_transfer_near.yaml  ablation_transfer_probe.yaml  ablation_transfer_xhard.yaml
docs/: _config.yml  arena.md  dashboard.html  evaluation.md  index.html  knowledge.yaml  methodology.md  problem-01-erdos-overlap.md  problem-03-autocorrelation.md  problem-04-third-autocorrelation.md  problem-05-min-distance-ratio.md  problem-06-kissing-number.md  problem-07-prime-number-theorem.md  problem-09-uncertainty-principle.md  problem-1-erdos-overlap.md  problem-10-thomson.md  problem-11-tammes.md  problem-12-flat-polynomials.md  problem-13-edges-triangles.md  problem-14-circle-packing-square.md  problem-15-heilbronn-triangles.md  problem-16-heilbronn-convex.md  problem-17-circles-rectangle.md  problem-17-hexagon-packing.md  problem-18-uncertainty-principle.md  problem-19-difference-bases.md  problem-2-first-autocorrelation.md  problem-22-kissing-number-d12.md  problem-23-kissing-number-d16.md  problem-3-autocorrelation.md  problem-4-third-autocorrelation.md  problem-5-min-distance-ratio.md  problem-6-kissing-number.md  problem-7-prime-number-theorem.md  timeline.md  uncertainty-push-trajectory.md
scripts/: ablation_mechanism.py  adam_peak_flatten.py  analyze_ablation.py  arena_watchdog.py  autonomous_loop.py  backfill_rankings.py  build_ablation_repos.sh  chebyshev_c2.py  check_submission.py  compute_router.py  council_demo.py  daily_status_cron.sh  deautoconv_c2.py  dinkelbach_c2.py  dinkelbach_cpu_v2.py  dinkelbach_mps.py  fourier_proj_c2.py  leaderboard_standings.py  local_benchmark.py  meta_loop.py  modal_basin_escape.py  modal_dinkelbach.py  modal_dinkelbach_deep.py  modal_erdos.py  modal_h100_aggressive.py  modal_prime_lp.py  modal_resolution_sweep.py  multiscale_c2.py  optimize.py  optimize_c2.py  optimize_erdos.py  optimize_flat_poly.py  optimize_hexagon.py  optimize_loop.py  optimize_prime.py  packet_ascent_1600k.py  packet_coordinate_ascent.py  post_discussion_tammes.py  post_discussions.py  promote_to_mb.py  (+22 more)
source/: README.md
tests/: _triple_verify_util.py  conftest.py  test_arena_submit.py  test_auto_submit.py  test_autocorrelation_fast.py  test_council.py  test_council_prompt.py  test_erdos.py  test_erdos_fast.py  test_evaluator.py  test_flat_poly.py  test_hexagon.py  test_optimizer.py  test_optimizer_dispatch.py  test_prime.py  test_record_campaign_monitor.py  test_resolution_guard.py  test_score_from_conv.py  test_triple_verify.py  test_triple_verify_registry.py  test_ulp_polish.py  (+2 more)
(+3383 files in other folders)
